# Projeto1

./: CMakeLists.txt  README.md  prj.conf  zephyr.xml
Projeto_Dk/: CMakeLists.txt  prj.conf
Projeto_Dk/src/: mainDk.c
Projeto_Dongle/: CMakeLists.txt  prj.conf  samples.yaml
Projeto_Dongle/src/: mainDG.c
Raspberry/scripts/: mensagem.py
